tests/fixtures/invalid/dict_div_dict.py
# Cannot divide Dict[str, int] and Dict[str, int]
x: float = {"a": 1} / {"a": 1}
